fix: date picker safari issue + fix homepage loading redirect image jump out issue

--- a/assets/scss/pages/_statistics.scss
+++ b/assets/scss/pages/_statistics.scss
@@ -1,4 +1,5 @@
-.statistics {
+.statistics,
+.review-expense {
   .date-picker {
     p {
       font-size: 17px;
